--- a/src/app/main-page/run-line/run-line.component.html
+++ b/src/app/main-page/run-line/run-line.component.html
@@ -14,6 +14,7 @@
         <a
           class="run-line-lnk"
           href="#"
+          [routerLink]="['/markets/', pair.currencyPairName.replace('/', '-')]"
         ></a>
         <div class="pair">
           <span>{{pair.currencyPairName}}</span>
@@ -29,6 +30,7 @@
         <div class="direction">
           <span [ngClass]="{'up' : isChangePositive(pair), 'down' : !isChangePositive(pair)}"></span>
         </div>
+
       </div>
 
 
@@ -45,22 +47,22 @@
           class="run-line-lnk"
           href="#"
           [routerLink]="['/markets/', pair.currencyPairName.replace('/', '-')]"
-        >
-          <div class="pair">
-            <span>{{pair.currencyPairName}}</span>
-          </div>
-          <div class="change">
-            <span [ngClass]="{'txt-green' : isChangePositive(pair),'txt-red' : !isChangePositive(pair)}">
-              {{pair.percentChange | currencyFormat: 'USD'}}%
-            </span>
-          </div>
-          <div class="course">
-            <span>{{pair.lastOrderRate | currencyFormat}}</span>
-          </div>
-          <div class="direction">
-            <span [ngClass]="{'up' : isChangePositive(pair), 'down' : !isChangePositive(pair)}"></span>
-          </div>
-        </a>
+        ></a>
+        <div class="pair">
+          <span>{{pair.currencyPairName}}</span>
+        </div>
+        <div class="change">
+          <span [ngClass]="{'txt-green' : isChangePositive(pair),'txt-red' : !isChangePositive(pair)}">
+            {{pair.percentChange | currencyFormat: 'USD'}}%
+          </span>
+        </div>
+        <div class="course">
+          <span>{{pair.lastOrderRate | currencyFormat}}</span>
+        </div>
+        <div class="direction">
+          <span [ngClass]="{'up' : isChangePositive(pair), 'down' : !isChangePositive(pair)}"></span>
+        </div>
+
       </div>
 
 
