--- a/src/app/popups/notifications-list/top-notification/top-notification.component.scss
+++ b/src/app/popups/notifications-list/top-notification/top-notification.component.scss
@@ -35,6 +35,7 @@
       justify-content: center;
       padding: 6px 12px;
       @media(max-width: 480px){
+        padding-right: 40px;
         justify-content: flex-start;
       }
       svg{
