--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -202,6 +202,7 @@
           </label>
         </div>
         <button
+          id="analytics-trading-buy"
           class="btn btn--active widget__trading-btn widget__trading-btn--buy"
           (click)="onSubmit(BUY)"
           [disabled]="loading"
@@ -349,6 +350,7 @@
           </label>
         </div>
         <button
+          id="analytics-trading-sell"
           class="btn btn--active widget__trading-btn widget__trading-btn--sell"
           (click)="onSubmit(SELL)"
           [disabled]="loading"
