--- a/src/app/main-page/bottom-slider/bottom-slider.component.html
+++ b/src/app/main-page/bottom-slider/bottom-slider.component.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="type">
-            <span>Анонс листинга</span>
+            <span>Listing Announcement</span>
           </div>
         </div>
         <div class="txt-inner">
@@ -72,7 +72,7 @@
           </div>
 
           <div class="type">
-            <span>Анонс листинга</span>
+            <span>Listing Announcement</span>
           </div>
         </div>
         <div class="txt-inner">
@@ -114,7 +114,7 @@
           </div>
 
           <div class="type">
-            <span>Анонс листинга</span>
+            <span>Listing Announcement</span>
           </div>
         </div>
         <div class="txt-inner">
