--- a/src/app/main-page/fs-slider/fs-slider.component.html
+++ b/src/app/main-page/fs-slider/fs-slider.component.html
@@ -18,7 +18,7 @@
       </div>
       <div class="slide-txt">
         <div class="txt-inner">
-          <h2><span>172,000 </span>трейдеров</h2>
+          <h2><span>172,000 </span>traders</h2>
           <p>{{'Register and become part of the Exrates trading community' | translate}}</p>
         </div>
       </div>
@@ -35,7 +35,7 @@
       </div>
       <div class="slide-txt">
         <div class="txt-inner">
-          <h2><span>172,000 </span>трейдеров</h2>
+          <h2><span>172,000 </span>traders</h2>
           <p>{{'Register and become part of the Exrates trading community' | translate}}</p>
         </div>
       </div>
@@ -52,7 +52,7 @@
       </div>
       <div class="slide-txt">
         <div class="txt-inner">
-          <h2><span>172,000 </span>трейдеров</h2>
+          <h2><span>172,000 </span>traders</h2>
           <p>{{'Register and become part of the Exrates trading community' | translate}}</p>
         </div>
       </div>
