--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -752,7 +752,9 @@
     border-bottom: 1px solid #e5ebf1;
     display: flex;
     align-items: center;
-
+    &.no-auth{
+      padding-left: 10px;
+    }
     .favorites {
       display: flex;
       align-items: center;
@@ -848,10 +850,11 @@
     }
 
     &.no-auth {
+      // .btn-block
         .trow, .thead {
           .pair {
             width: 176px;
-            padding-left: 22px;
+            padding-left: 33px;
           }
       }
     }
