--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -78,8 +78,11 @@
       }
 
       .btn {
-        margin: auto;
+        
         max-width: 290px;
+        @media(max-width: 992px) {
+          margin: auto;
+        }
       }
     }
 
