--- a/src/app/main-page/run-line/run-line.component.html
+++ b/src/app/main-page/run-line/run-line.component.html
@@ -3,13 +3,15 @@
   *ngIf="currencyPairs.length"
 >
   <div class="run-line-wr">
-    <div
+    <ngx-slick-carousel
       class="carousel run-line-inner"
-      data-position="0"
+      #slickModal2="slick-carousel"
+      [config]="slideConfig"
     >
       <div
         *ngFor="let pair of currencyPairs; trackBy: trackByPairs"
         class="slide run-line-item"
+        ngxSlickItem
       >
         <a
           class="run-line-lnk"
@@ -34,38 +36,7 @@
       </div>
 
 
-    </div>
-    <div
-      class="carousel run-line-inner"
-      data-position="0"
-    >
-      <div
-        *ngFor="let pair of currencyPairs; trackBy: trackByPairs"
-        class="slide run-line-item"
-      >
-        <a
-          class="run-line-lnk"
-          href="#"
-          [routerLink]="['/markets/', pair.currencyPairName.replace('/', '-')]"
-        ></a>
-        <div class="pair">
-          <span>{{pair.currencyPairName}}</span>
-        </div>
-        <div class="change">
-          <span [ngClass]="{'txt-green' : isChangePositive(pair),'txt-red' : !isChangePositive(pair)}">
-            {{pair.percentChange | currencyFormat: 'USD'}}%
-          </span>
-        </div>
-        <div class="course">
-          <span>{{pair.lastOrderRate | currencyFormat}}</span>
-        </div>
-        <div class="direction">
-          <span [ngClass]="{'up' : isChangePositive(pair), 'down' : !isChangePositive(pair)}"></span>
-        </div>
+    </ngx-slick-carousel>
 
-      </div>
-
-
-    </div>
   </div>
 </div>
