--- a/src/app/main-page/graphic-links/graphic-links.component.html
+++ b/src/app/main-page/graphic-links/graphic-links.component.html
@@ -42,8 +42,9 @@
     </div>
     <div class="link-item">
       <a
-        href="#"
+        href="https://developer.exrates.me/"
         class="lnk"
+        target="_blank"
       ></a>
       <div class="icon-wr">
         <img
@@ -53,9 +54,7 @@
       </div>
       <div class="txt-wr">
         <span>
-          {{'Affiliate Program' | translate}} -<br>
-          {{'Market Management' | translate}}<br>
-          {{'Support' | translate}}
+          {{'API Documentation' | translate}}
         </span>
       </div>
     </div>
