--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -62,8 +62,7 @@
 
         <div
           class="wrap-input send__wrap-input"
-          [ngClass]="{'wrap-input--error': form.get('amount').invalid &&
-            (form.get('amount').touched || isSubmited)}"
+          [ngClass]="{'wrap-input--error': formAmount.invalid && (formAmount.touched || isSubmited)}"
           *ngIf="fiatInfoByName && fiatInfoByName.merchantCurrencyData.length"
         >
           <div class="daily-avaliable">{{'24h limit:' | translate}}
@@ -91,48 +90,43 @@
             name="amount"
             formControlName="amount"
           >
-            <div *ngIf="form.get('amount').errors != null">
+            <div *ngIf="formAmount.errors && (formAmount.touched || isSubmited)">
               <div class="input-hint-wrapper">
                 <span
-                  class="wrap-input__message--show"
-                  *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
-                  [ngClass]="{'wrap-input__message':
-                form.controls['amount'].errors['isMinThenMinWithdraw'] &&
-                (form.controls['amount'].touched || isSubmited)}"
+                  class="wrap-input__message wrap-input__message--show"
+                  *ngIf="formAmount.errors['isMinThenMinWithdraw']"
                 >
                   {{
-                'Minimum sum for withdrawal' | translate
-                }} {{
-                minWithdrawSum | currencyFormat: currName
-                }} {{
-                currName
-                }}
+                    'Minimum sum for withdrawal' | translate
+                  }} {{
+                    minWithdrawSum | currencyFormat: currName
+                  }} {{
+                    currName
+                  }}
                 </span>
                 <span
                   class="wrap-input__message wrap-input__message--show"
-                  *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance']
-                && (form.controls['amount'].touched || isSubmited)"
+                  *ngIf="formAmount.errors['isMaxThenActiveBalance']"
                 >
                   {{
-                'Your available balance:' | translate
-                }} {{
-                activeBalance | currencyFormat: currName
-                }} {{
-                currName
-                }}
+                  'Your available balance:' | translate
+                  }} {{
+                    activeBalance | currencyFormat: currName
+                  }} {{
+                    currName
+                  }}
                 </span>
                 <span
                   class="wrap-input__message wrap-input__message--show"
-                  *ngIf="form.controls['amount'].errors['isMaxThenDailyLimit'] &&
-                (form.controls['amount'].touched || isSubmited)"
+                  *ngIf="formAmount.errors['isMaxThenDailyLimit'] "
                 >
                   {{
-                'Your 24h limit to withdrawal:' | translate
-                }} {{
-                dailyLimit | currencyFormat: currName
-                }} {{
-                currName
-                }}
+                    'Your 24h limit to withdrawal:' | translate
+                  }} {{
+                    dailyLimit | currencyFormat: currName
+                  }} {{
+                    currName
+                  }}
                 </span>
               </div>
             </div>
@@ -140,11 +134,11 @@
 
           <span class="bottom-tooltip wrap-input__message--show">
             {{
-            'Minimum sum for withdrawal' | translate
+              'Minimum sum for withdrawal' | translate
             }} {{
-            minWithdrawSum | currencyFormat: currName
+              minWithdrawSum | currencyFormat: currName
             }} {{
-            currName
+              currName
             }}
           </span>
 
@@ -179,8 +173,7 @@
           <!--add select__list-searching--open for looking open state-->
           <div
             class="select__list-searching"
-            [ngClass]="{'select__list-searching--open':
-            openPaymentSystemDropdown}"
+            [ngClass]="{'select__list-searching--open': openPaymentSystemDropdown}"
             *ngIf="openPaymentSystemDropdown"
           >
             <div class="select__search">
@@ -223,8 +216,7 @@
               >
                 <li
                   class="select__list-item"
-                  *ngFor="let nested of merchant.listMerchantImage |
-                    merchantImageFilter: searchTemplate"
+                  *ngFor="let nested of merchant.listMerchantImage | merchantImageFilter: searchTemplate"
                   (click)="selectMerchant(merchant, nested)"
                 >
                   <div class="icon-wr">
@@ -245,8 +237,7 @@
 
         <div
           class="wrap-input send__wrap-input"
-          [ngClass]="{'wrap-input--error': (!form.controls['address'].valid &&
-          (form.controls['address'].touched || isSubmited)) && form.controls['amount'].valid}"
+          [ngClass]="{'wrap-input--error': (!formAddress.valid && (formAddress.touched || isSubmited)) && formAmount.valid}"
           *ngIf="fiatInfoByName && fiatInfoByName.merchantCurrencyData.length && selectedMerchant.name !== 'FUG'"
         >
           <input
@@ -263,9 +254,7 @@
           <div class="wrap-input__line"></div>
           <div
             class="input-hint-wrapper"
-            *ngIf="(!form.controls['address'].valid &&
-              (form.controls['address'].touched || isSubmited)) &&
-              form.controls['amount'].valid"
+            *ngIf="(!formAddress.valid && (formAddress.touched || isSubmited)) && formAmount.valid"
           >
             <span class="wrap-input__message wrap-input__message--show">
               {{'Set merchant address for withdrawal' | translate}}
@@ -319,7 +308,7 @@
       </div>
       <button
         class="btn btn--center "
-        [disabled]="!form.valid"
+        [disabled]="isDisabledForm"
         (click)="onSubmitWithdrawal()"
       >
         {{'Withdraw' | translate}}
