--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
@@ -1,19 +1,180 @@
-.refill-QIWI{
-	.refill__qr-code{
-		text-align: center;
-	}
-	.refill__crypto-title{
-		text-align: center;
-		font-size: 16px;
-		margin-bottom: 8px;
-	}
-	.refill__crypto-hash{
-		width: auto;
-		text-align: center;
-		font-size: 16px;
-		margin-bottom: 10px;
-	}
-	.btn{
-		margin: 0 auto;
-	}
+.refill-QIWI {
+  .refill__qr-code {
+    text-align: center;
+  }
+
+  .refill__crypto-title {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
+
+  .refill__crypto-hash {
+    width: auto;
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .btn {
+    margin: 0 auto;
+  }
+}
+
+
+
+
+
+
+
+
+// temp
+
+.info-block {
+  margin: 0 30px 23px;
+
+  //   border-bottom: 1px solid #ECECEC;
+  display: flex;
+  justify-content: space-between;
+  padding: 17px;
+
+  @media(max-width: 1200px) {
+    border-bottom: 1px solid #94C2FF;
+  }
+
+  @media(max-width: 1240px) {
+    padding: 17px 0;
+  }
+
+  @media(max-width: 640px) {
+    margin: 0 15px 32px;
+  }
+
+  .left-part {
+    max-width: 446px;
+    width: 100%;
+    margin: 0 auto;
+
+    @media(max-width: 640px) {
+      max-width: unset;
+      margin-right: 0;
+    }
+  }
+
+
+  .item-info {
+    margin-bottom: 11px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .key-info {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.44;
+    color: #4B4B4B;
+
+    @media(max-width: 1200px) {
+      color: #94C2FF;
+    }
+  }
+
+  .value-info {
+    min-width: 261px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.44;
+    text-align: left;
+    color: #000000;
+
+    @media(max-width: 1200px) {
+      color: #DEDEFB;
+    }
+  }
+
+}
+
+.button-part {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 490px;
+  width: 100%;
+  margin: 0 auto;
+
+  .btn {
+    max-width: 227px;
+    margin-left: 0;
+
+    &:first-child {
+      margin-right: 32px;
+    }
+  }
+}
+
+
+.discuss-block {
+  .timer {
+    p {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 16px;
+      color: #4B4B4B;
+      margin: 0 auto 20px;
+      text-align: center;
+
+      span {
+        color: #000000;
+        font-weight: 600;
+        margin-left: 30px;
+      }
+    }
+
+  }
+
+  .btn {
+    margin: 0 auto 28px;
+    max-width: 227px;
+  }
+}
+
+
+.disput-detail {
+  max-width: 667px;
+  margin: 0 auto;
+
+  h5 {
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    text-transform: uppercase;
+	color: #000000;
+	margin-bottom: 12px;
+  }
+
+  p {
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+	color: #000000;
+	margin-bottom: 22px;
+  }
+
+  form {
+    textarea {
+      width: 100%;
+      min-height: 160px;
+      resize: none;
+		margin-bottom: 15px;
+    }
+
+    .btn {
+      max-width: 227px;
+      margin-left: auto;
+    }
+  }
 }
