--- a/src/app/syndex-info/syndex-info.component.html
+++ b/src/app/syndex-info/syndex-info.component.html
@@ -1,3 +1,40 @@
-<p>
-  syndex-info works!
-</p>
+<h2 class="title refill__title">
+  {{'Refill' | translate}} <span>USD</span>
+</h2>
+
+
+<div class="info-block">
+  <div class="left-part">
+    <div class="item-info">
+      <span class="key-info">{{'id:' | translate}}</span>
+      <span class="value-info">981</span>
+    </div>
+    <div class="item-info">
+      <span class="key-info">{{'Amount:' | translate}}</span>
+      <span class="value-info">4.44 USD</span>
+    </div>
+    <div class="item-info">
+      <span class="key-info">{{'Current status:' | translate}}</span>
+      <span class="value-info">On moderation</span>
+    </div>
+    <div class="item-info">
+      <span class="key-info">{{'To pay:' | translate}}</span>
+      <span class="value-info">100 UAH Transfer with specific Bank</span>
+    </div>
+    <div class="item-info">
+      <span class="key-info">{{'Payment details:' | translate}}</span>
+      <span class="value-info">Waiting for payment details. Please waite</span>
+    </div>
+    <div class="item-info">
+      <span class="key-info">{{'Created:' | translate}}</span>
+      <span class="value-info">Th 21.09.2019 00:52:56</span>
+    </div>
+  </div>
+</div>
+<div class="button-part">
+  <button
+    class="btn balance__title-btn"
+    disabled
+  >Confirm payment</button>
+  <button class="btn balance__title-btn">Cancel</button>
+</div>
