--- a/src/app/main-page/fs-slider/fs-slider.component.html
+++ b/src/app/main-page/fs-slider/fs-slider.component.html
@@ -23,7 +23,7 @@
         </div>
       </div>
     </div>
-    <div
+    <!-- <div
       ngxSlickItem
       class="slider-item"
     >
@@ -56,7 +56,7 @@
           <p>{{'Register and become part of the Exrates trading community' | translate}}</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </ngx-slick-carousel>
 
@@ -79,7 +79,7 @@
       </button>
     </form>
   </div>
-  <div class="slider-dots">
+  <!-- <div class="slider-dots">
     <div
       class="dots-item"
       [ngClass]="{'active': currSlide == '0'}"
@@ -111,5 +111,5 @@
       >
     </div>
 
-  </div>
+  </div> -->
 </div>
