--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
   <app-run-line></app-run-line>
   <app-graphic-links></app-graphic-links>
   <app-markets-home></app-markets-home>
-  <app-bottom-slider></app-bottom-slider>
+  <!-- <app-bottom-slider></app-bottom-slider> -->
   <app-info-grafics></app-info-grafics>
   <app-bottom-form></app-bottom-form>
 </div>
