return old style

--- a/src/app/funds/balance/send-money/send-money.component.scss
+++ b/src/app/funds/balance/send-money/send-money.component.scss
@@ -24,14 +24,14 @@
 }
 
 
-::ng-deep app-price-input{
-position: relative;
+// ::ng-deep app-price-input{
+// position: relative;
 
-}
+// }
 
-.daily-avaliable, .avaliable{
-  position: static;
-  text-align: left;
-  width: auto;
-  margin-bottom: 7px;
-}
+// .daily-avaliable, .avaliable{
+//   position: static;
+//   text-align: left;
+//   width: auto;
+//   margin-bottom: 7px;
+// }
