--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -291,7 +291,7 @@
       </div>
       <div
         class="balance__hide-zero"
-        *ngIf="currTab !== Tab.PR"
+        *ngIf="!(currTab === Tab.PR || currTab === Tab.IEO || this.filtering)"
       >
         <label
           for=""
