--- a/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
+++ b/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
@@ -13,6 +13,7 @@
       (focus)="openDropdown()"
       (keydown)="preventEventInput($event)"
       (keyup)="preventEventInput($event)"
+      (click)="onClick($event)"
       type="text"
       autocomplete="off"
       required
