--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -206,6 +206,7 @@
       </div>
 
       <button
+        id="analytics-modal-refill"
         class="btn btn--center"
         *ngIf="!submitSuccess && selectedMerchant"
         (click)="submitRefill()"
