--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -209,6 +209,7 @@
         </div>
 
         <button
+          [id]="currName === 'BTC' ? 'analytics-modal-withdraw-btc': currName === 'ETH' ? 'analytics-modal-withdraw-eth': ''"
           class="btn btn--center"
           [disabled]="isDisabledForm"
           (click)="onSubmitWithdrawal()"
