--- a/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
+++ b/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
@@ -5,7 +5,7 @@
   <div class="dynamic-input__wrap">
     <input
       #input
-      id="DIInput"
+      id="DIInput analytics-dashboard-search-currency-pairs"
       class="dynamic-input__input"
       name="item"
       [ngModel]="value"
