--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-mobile.component.html
@@ -1,5 +1,6 @@
 <div class="tabs widget__tabs">
   <button
+    id="analytics-dashboard-mobile-open-orders"
     class="tabs__item "
     (click)="toggleMainTab('open')"
     [ngClass]="{'tabs__item--active': mainTab === 'open', 'tab-no-active': mainTab !== 'open'}"
@@ -8,6 +9,7 @@
     {{'Open orders' | translate}} <span class="orders-count">{{openOrdersCount$ | async}}</span>
   </button>
   <button
+    id="analytics-dashboard-mobile-history-orders"
     class="tabs__item "
     (click)="toggleMainTab('history')"
     [ngClass]="{'tabs__item--active': mainTab === 'history', 'tab-no-active': mainTab !== 'history'}"
