--- a/src/app/dashboard/components/embedded-orders/embedded-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders.component.html
@@ -163,6 +163,7 @@
   <div class="widget__content">
     <div class="tabs widget__tabs">
       <button
+        id="analytics-dashboard-open-orders"
         class="tabs__item "
         (click)="toggleMainTab('open')"
         [ngClass]="{'tabs__item--active': mainTab === 'open', 'tab-no-active': mainTab !== 'open'}"
@@ -171,6 +172,7 @@
         {{'Open orders' | translate}} (<span>{{openOrdersCount$ | async}}</span>)
       </button>
       <button
+        id="analytics-dashboard-history-orders"
         class="tabs__item "
         (click)="toggleMainTab('history')"
         [ngClass]="{'tabs__item--active': mainTab === 'history', 'tab-no-active': mainTab !== 'history'}"
