--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -2,6 +2,7 @@
   <div class="row row--jcsb row--aic widget__trading-row">
     <div class="dropdown widget__limit-dropdown">
       <div
+        [id]="'analytics-trading-mobile-' + limit.replace('_', '-').toLowerCase()"
         class="dropdown__btn"
         *ngFor="let limit of limitsData"
         [ngClass]="{'selectedButton': dropdownLimitValue === limit}"
