--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -98,6 +98,7 @@
       </div>
       <div class="copy-button">
         <button
+          id="analytics-settings-copy-id"
           (click)="copyPublicId(userInfo.publicId)"
           *ngIf="!isPublicIdCopied"
         >
