hiden sessions history

--- a/src/app/settings/session/session.component.html
+++ b/src/app/settings/session/session.component.html
@@ -80,7 +80,10 @@
     >{{'Save' | translate}}</button>
   </form>
 
-  <table class="table ballance-table session-history-table">
+  <table
+    class="table ballance-table session-history-table"
+    *ngIf="false"
+  >
     <thead>
       <tr>
         <th class="table__cell-head table__cell-head--tal destop-content">{{'Device' | translate}}</th>
